--- a/.babelrc
+++ b/.babelrc
@@ -13,8 +13,15 @@
       ]
     ],
     "plugins": [
-        // 解决多个地方使用相同代码导致打包重复的问题
-        ["@babel/plugin-transform-runtime"]
+      [
+        "@babel/plugin-transform-runtime",
+        {
+          "corejs": false,
+          "helpers": true,
+          "regenerator": true,
+          "useESModules": false
+        }
+      ]
     ],
     "ignore": [
         "node_modules/**"
