--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "rf-bank",
-  "version": "0.0.5",
+  "version": "0.0.7",
   "description": "function",
   "main": "bundle.js",
-  "author": "chaxus",
+  "author": "",
   "license": "MIT",
   "scripts": {
     "build": "rollup -c ./rollup.config.js",
@@ -18,7 +18,8 @@
     "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-eslint": "^7.0.0",
     "rollup-plugin-node-resolve": "^5.2.0",
-    "rollup-plugin-polyfill-node": "^0.8.0"
+    "rollup-plugin-polyfill-node": "^0.8.0",
+    "rollup-plugin-terser": "^7.0.2"
   },
   "dependencies": {
     "core-js": "2",
