--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "rf-bank",
-  "version": "0.0.7",
+  "version": "0.0.8",
   "description": "function",
-  "main": "bundle.js",
+  "main": "dist/bundle.js",
   "author": "",
   "license": "MIT",
   "scripts": {
@@ -13,13 +13,16 @@
     "@babel/core": "^7.16.0",
     "@babel/plugin-transform-runtime": "^7.16.4",
     "@babel/preset-env": "^7.16.4",
+    "@types/qrcode": "^1.4.2",
     "rollup": "^2.60.2",
     "rollup-plugin-babel": "^4.4.0",
     "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-eslint": "^7.0.0",
     "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-polyfill-node": "^0.8.0",
-    "rollup-plugin-terser": "^7.0.2"
+    "rollup-plugin-terser": "^7.0.2",
+    "rollup-plugin-typescript2": "^0.31.1",
+    "typescript": "^4.5.4"
   },
   "dependencies": {
     "core-js": "2",
