--- a/.babelrc
+++ b/.babelrc
@@ -1,27 +1,24 @@
 {
     "presets": [
+      "@babel/typescript",
       [
         "@babel/preset-env",
         {
-          "modules": false,
-          "useBuiltIns": "usage",
-          "corejs": "2.6.10",
-          "targets": {
-            "ie": 10
+          // "useBuiltIns": "usage",
+          "targets":{
+            "ie":10
           }
+          // "corejs": {
+          //   "version": 3,
+          //   "proposals": true // 使用尚在“提议”阶段特性的 polyfill
+          // }
         }
       ]
     ],
     "plugins": [
-      [
-        "@babel/plugin-transform-runtime",
-        {
-          "corejs": false,
-          "helpers": true,
-          "regenerator": true,
-          "useESModules": false
-        }
-      ]
+      "@babel/plugin-transform-runtime",
+      "@babel/proposal-class-properties",
+      "@babel/proposal-object-rest-spread"
     ],
     "ignore": [
         "node_modules/**"
