--- a/package.json
+++ b/package.json
@@ -1,31 +1,33 @@
 {
-  "name": "rf-bank",
-  "version": "0.0.16",
+  "name": "rfarcel",
+  "version": "0.0.4",
   "description": "function",
   "main": "dist/bundle.js",
   "author": "",
   "license": "MIT",
   "scripts": {
     "build": "rollup -c ./rollup.config.js",
-    "prepublish": "npm run build"
+    "prepublish": "npm run build",
+    "compile": "babel main.ts -o bundle.js"
   },
   "devDependencies": {
+    "@babel/cli": "^7.17.10",
     "@babel/core": "^7.16.0",
-    "@babel/plugin-transform-runtime": "^7.16.4",
+    "@babel/plugin-proposal-class-properties": "^7.16.7",
+    "@babel/plugin-proposal-object-rest-spread": "^7.17.3",
+    "@babel/plugin-transform-runtime": "^7.17.10",
     "@babel/preset-env": "^7.16.4",
+    "@babel/preset-typescript": "^7.16.7",
+    "@rollup/plugin-babel": "^5.3.1",
+    "@rollup/plugin-commonjs": "^22.0.0",
     "@types/qrcode": "^1.4.2",
-    "rollup": "^2.60.2",
-    "rollup-plugin-babel": "^4.4.0",
-    "rollup-plugin-commonjs": "^10.1.0",
-    "rollup-plugin-eslint": "^7.0.0",
-    "rollup-plugin-node-resolve": "^5.2.0",
-    "rollup-plugin-polyfill-node": "^0.8.0",
+    "rollup": "^2.72.1",
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-typescript2": "^0.31.1",
     "typescript": "^4.5.4"
   },
   "dependencies": {
-    "core-js": "2",
+    "canvas": "^2.9.1",
     "qrcode": "^1.5.0"
   }
 }
